# php-parser

./: .gitignore  AGENTS.md  Cargo.toml  DETAILED_GRAMMAR_REVIEW.md  EDGE_CASE_TESTS.md  GEMINI.md  GRAMMAR_AUDIT.md  GRAMMAR_AUDIT_SUMMARY.md  GRAMMAR_CHECKLIST.md  HASH_EXTENSION_PLAN.md  README.md  TODO.md  report.md  test_apply_simple.php  test_assignment.php  test_basic.php  test_filter_debug.php  test_filter_simple.php  test_hook_debug.php  test_hook_no_postinc.php  test_method_return.php  test_missing_algos.php  test_postinc.php  test_postinc_simple.php  test_real_wp_hook.php  test_return_values.php  test_simple_array_funcs.php  test_wordpress_compat.php  test_wp_hook.php  vm-specification.md
.github/: copilot-instructions.md
ast/: ast_test.go  kind.go  node.go
crates/php-vm/: Cargo.toml
crates/php-vm/examples/: executor_demo.rs  pthreads_demo.rs  test_finally_comprehensive.php  test_finally_simple.php  test_finally_unwind.rs  test_finally_unwind_debug.php  test_parity.php
crates/php-vm/src/: lib.rs
crates/php-vm/src/builtins/: array.rs  bcmath.rs  class.rs  classes.rs  datetime.rs  exception.rs  exec.rs  filesystem.rs  function.rs  http.rs  json.rs  math.rs  mbstring.rs  mod.rs  output_control.rs  pcre.rs  spl.rs  stdlib.rs  string.rs  url.rs  variable.rs  zlib.rs
crates/php-vm/src/builtins/hash/: hmac.rs  kdf.rs  mod.rs
crates/php-vm/src/builtins/hash/algorithms/: fnv.rs  fnv1_32.rs  fnv1_64.rs  fnv1a_32.rs  fnv1a_64.rs  md2.rs  md4.rs  md5.rs  mod.rs  sha1.rs
crates/php-vm/src/builtins/mysqli/: connection.rs  mod.rs  result.rs  types.rs
crates/php-vm/src/builtins/openssl/: mod.rs
crates/php-vm/src/builtins/pdo/: class_stub.rs  driver.rs  mod.rs  types.rs
crates/php-vm/src/builtins/pdo/drivers/: mod.rs  mysql.rs  sqlite.rs
crates/php-vm/src/builtins/zip/: mod.rs
crates/php-vm/src/compiler/: chunk.rs  emitter.rs  mod.rs
crates/php-vm/src/core/: heap.rs  interner.rs  mod.rs  value.rs
crates/php-vm/src/fcgi/: mod.rs  protocol.rs  request.rs
crates/php-vm/src/runtime/: context.rs  core_extension.rs  date_extension.rs  extension.rs  hash_extension.rs  json_extension.rs  mb_extension.rs  mod.rs  mysqli_extension.rs  openssl_extension.rs  pdo_extension.rs  pthreads_extension.rs  registry.rs  resource_manager.rs  zip_extension.rs  zlib_extension.rs
crates/php-vm/src/runtime/mb/: encoding.rs  mod.rs  state.rs
crates/php-vm/src/sapi/: fpm.rs  mod.rs
crates/php-vm/src/vm/: array_access.rs  assign_op.rs  callable.rs  class_resolution.rs  engine.rs  error_construction.rs  error_formatting.rs  executor.rs  frame.rs  frame_helpers.rs  inc_dec.rs  mod.rs  opcode.rs  opcode_executor.rs  stack.rs  stack_helpers.rs  superglobal.rs  type_conversion.rs  value_extraction.rs  variable_ops.rs  visibility.rs
crates/php-vm/src/vm/opcodes/: arithmetic.rs  array_ops.rs  bitwise.rs  comparison.rs  control_flow.rs  mod.rs  special.rs
crates/php-vm/tests/: array_access.rs  array_assign.rs  array_functions.rs  array_offset_access.rs  arrays.rs  assign_dim_ref.rs  assign_op_dim.rs  assign_op_static.rs  assign_op_tests.rs  bcmath.rs  class_constants.rs  class_name_resolution.rs  classes.rs  closures.rs  coalesce_assign.rs  constant_errors.rs  constants.rs  constructors.rs  datetime_classes_test.rs  datetime_procedural_test.rs  datetime_test.rs  debug_verify_return.rs  dynamic_class_const.rs  echo_escape_test.rs  error_handler.rs  eval_parity.rs  exceptions.rs  exec.rs  existence_checks.rs  fib.rs  filesystem.rs  finally_return_break_continue.rs  finally_unwinding.rs  foreach.rs  foreach_refs.rs  fpm_integration_test.rs  func_refs.rs  function_args.rs  function_exists.rs  functions.rs  (+78 more)
crates/php-vm/tests/common/: mod.rs
docs/: BUILTIN_STRICT_TYPES_ANALYSIS.md  EVAL_STRICTNESS_COMPLETE.md  EXECUTOR_FEATURES_REPORT.md  HASH_EXTENSION_PLAN.md  IMPLEMENTATION_REVIEW.md  MISSING_FEATURES_PLAN.md  MYSQLI_EXTENSION_PLAN.md  MYSQLI_IMPLEMENTATION_SUMMARY.md  MYSQLI_PHASE1_COMPLETE.md  MYSQLI_TESTING_STRATEGY.md  OOP_MISSING_FEATURES_PLAN.md  PDO_ARCHITECTURE.md  PDO_EXTENSION_PLAN.md  PDO_QUICK_START.md  PDO_README.md  PDO_TESTING_STRATEGY.md  PHP_FPM.md  PHP_FPM_IMPLEMENTATION_REPORT.md  PHP_FPM_QUICKSTART.md  PROPERTY_TYPE_VALIDATION.md  PTHREADS_CLI_INTEGRATION.md  PTHREADS_EXTENSION.md  PTHREADS_IMPLEMENTATION.md  STDERR_CAPTURE_IMPLEMENTATION.md  STRICT_TYPES_IMPLEMENTATION_REVIEW.md  STRICT_TYPES_STATUS.md  VM_ARCHITECTURE_DIAGRAM.md  strict_types_features.md
examples/: datetime_demo.php  (+24 more)
(+346 files in other folders)
