[package]
name = "php-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
bumpalo = { version = "3.19.0", features = ["collections"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
rayon = "1.10.0"
pprof = { version = "0.15.0", features = ["flamegraph", "protobuf", "protobuf-codec"] }
memchr = "2.7.6"

[dev-dependencies]
insta = "1.44.2"
