[package]
name = "php-vm"
version = "0.1.0"
edition = "2021"

[dependencies]
indexmap = "2.0"
php-parser = { path = "../php-parser" }
bumpalo = "3.12"
clap = { version = "4.5", features = ["derive"] }
rustyline = "14.0"
smallvec = "1.13"
anyhow = "1.0"
tempfile = "3.23.0"
regex = "1.12.2"
pcre2 = "0.2.11"
chrono = "0.4"
chrono-tz = "0.10"

[[bin]]
name = "php"
path = "src/bin/php.rs"
