[package]
name = "php-vm"
version = "0.1.0"
edition = "2021"

[dependencies]
indexmap = "2.0"
php-parser = { path = "../php-parser" }
bumpalo = "3.12"
clap = { version = "4.5", features = ["derive"] }
rustyline = "14.0"
smallvec = "1.13"
anyhow = "1.0"
tempfile = "3.23.0"
regex = "1.12.2"
pcre2 = "0.2.11"
chrono = "0.4"
chrono-tz = "0.10"

# Hash extension dependencies
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
whirlpool = "0.10"
digest = "0.10"
hex = "0.4"
subtle = "2.5"

# MySQLi extension dependencies
mysql = "24.0"

# PDO extension dependencies
rusqlite = { version = "0.31", features = ["bundled"] }
postgres = "0.19"
oracle = "0.6"

# Zlib extension dependencies
flate2 = "1.0"

# Zip extension dependencies
zip = "2.2.2"

# OpenSSL extension dependencies
openssl = "0.10.75"
base64 = "0.21"


[[bin]]
name = "php"
path = "src/bin/php.rs"
